--- a/index.html
+++ b/index.html
@@ -17,9 +17,18 @@
     </div>
     <div class="featuring">
       <div class="cards">
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
+        <div class="card">
+          <h1 class="card-heading">Services</h1>
+          <img src="sky.jpg" alt="" />
+        </div>
+        <div class="card">
+          <h1 class="card-heading">Gallery</h1>
+          <img src="spaceman.jpg" alt="" />
+        </div>
+        <div class="card">
+          <h1 class="card-heading">About</h1>
+          <img src="energy.jpg" alt="" />
+        </div>
       </div>
     </div>
   </body>
