--- a/index.html
+++ b/index.html
@@ -31,5 +31,9 @@
         </div>
       </div>
     </div>
+    <div class="bottom">
+      <h1>...for you my friend!</h1>
+    </div>
   </body>
+  <footer><img class="icon" src="insta.png" alt="" /> tom.is.coding</footer>
 </html>
